# jenkins-mcp

./: .gitignore  Dockerfile  Makefile  README-CN.md  README.md  TOOLS.md  cursor-mcp-config.json  pyproject.toml  scenarios.default.yaml  scenarios.example.yaml
src/jenkins/: __init__.py  __main__.py  config.py  server.py
src/jenkins/prompts/: __init__.py  jenkins_prompts.py
src/jenkins/resources/: jenkins_resources.py
src/jenkins/tools/: __init__.py  client.py  exceptions.py  mcp_tools.py  scenarios.py  types.py
tests/: __init__.py  conftest.py  test_client.py
